force-app/main/default/objects/Custom_LWC_Setting__mdt/Custom_LWC_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Custom LWC Setting</label>
    <pluralLabel>Custom LWC Settings</pluralLabel>
</CustomObject>