force-app/main/default/objects/Custom_LWC_Setting__mdt/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <label>Component Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>