force-app/main/default/objects/Custom_LWC_Setting__mdt/fields/Property_Value__c.field-meta.xml
<CustomField>
    <fullName>Property_Value__c</fullName>
    <label>Property Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>